# book_crawer

./: .env  .gitignore  CLAUDE.md  README.md  base_crawler.py  crawer_77shuwu.py  crawer_huanghelou.py  pyproject.toml  run_crawler.py  run_tests.py  utils.py
.claude/: settings.local.json.qwen  settings.local.json.zhipu
docs/: new-crawler.md  troubleshooting.md
scripts/: __init__.py  convert_novel_to_json.py  run_crawler.py  run_lint.py  run_lint.sh  run_tests.py
skills/: debug-site.md  git-workflow.md
special_novel_tools/: json_to_txt.py
src/: __init__.py  base_crawler.py  config.py  crawer_77shuwu.py  crawer_huanghelou.py  crawler_77shuwu.py  crawler_huanghelou.py  utils.py
tests/: __init__.py  test_crawler.py  test_integration.py
