[tool.uv]
# uv配置

[project]
# 项目元数据
name = "novel-crawler"
description = "小说爬虫系统，支持多网站小说爬取"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"

# 核心依赖
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "tqdm>=4.64.0",
]

# 可选依赖
[project.optional-dependencies]
env = [
    "python-dotenv>=1.0.0",
]
